--- a/libcrystfel/libcrystfel-config.h.cmake.in
+++ b/libcrystfel/libcrystfel-config.h.cmake.in
@@ -4,6 +4,7 @@
 #cmakedefine HAVE_FFTW
 #cmakedefine HAVE_XGANDALF
 #cmakedefine HAVE_PINKINDEXER
+#cmakedefine HAVE_FAST_INDEXER
 #cmakedefine HAVE_FDIP
 #cmakedefine HAVE_ZLIB
 #cmakedefine HAVE_GZBUFFER
