Modify meson build for ffbidx
Signed-off-by: Leonarski Filip <leonarski_f@ra-l-005.psi.ch>

--- a/libcrystfel/meson.build
+++ b/libcrystfel/meson.build
@@ -45,6 +45,13 @@ if xgandalfdep.found()
   conf_data.set10('HAVE_XGANDALF', true)
 endif
 
+ffbidxdep = dependency('fast_indexer_crystfel',
+                         required: false,
+                         fallback: ['ffbidx', 'ffbidx_dep'])
+if ffbidxdep.found()
+  conf_data.set10('HAVE_FFBIDX', true)
+endif
+
 pinkindexerdep = dependency('pinkIndexer',
                             required: false,
                             fallback: ['pinkindexer', 'pinkindexer_dep'])
@@ -146,6 +153,7 @@ libcrystfel_sources = ['src/image.c',
                        'src/indexers/xds.c',
                        'src/indexers/asdf.c',
                        'src/indexers/xgandalf.c',
+                       'src/indexers/ffbidx.c',
                        'src/indexers/pinkindexer.c',
                        'src/indexers/fromfile.c',
                        symop_lex_ch,
@@ -162,7 +170,7 @@ libcrystfel = library('crystfel', [libcrystfel_sources, libcrystfel_versionc],
                       include_directories: [libcrystfel_includes,
                                             libcrystfel_conf_inc],
                       dependencies: [mdep, utildep, fftwdep, gsldep, zlibdep,
-                                     hdf5dep, pthreaddep,
+                                     hdf5dep, pthreaddep, ffbidxdep,
                                      xgandalfdep, pinkindexerdep, fdipdep,
                                      ccp4dep, msgpackdep, seedeedep, cjsondep],
                       install: true)
