[fast_indexer]: New C API

--- a/libcrystfel/CMakeLists.txt
+++ b/libcrystfel/CMakeLists.txt
@@ -3,7 +3,7 @@ project(libcrystfel VERSION ${CRYSTFEL_SHORT_VERSION} LANGUAGES C)
 pkg_check_modules(XGANDALF xgandalf)
 pkg_check_modules(PINKINDEXER pinkIndexer)
 pkg_check_modules(FDIP fdip)
-pkg_check_modules(FFBIDX fast_indexer_crystfel)
+pkg_check_modules(FFBIDX fast_indexer)
 find_package(ZLIB)
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
